http-https/ossm/istio-system/gw-nginx-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-default-egress-nginx-mtls-http
  namespace: istio-system
spec:
  selector:
    istio: default-egress
  servers:
  - port:
      number: 8443
      name: https
      protocol: HTTPS
    hosts:
    - nginx.${OCP_APPS_DOMAIN}
    tls:
      mode: ISTIO_MUTUAL
