http-https/ossm/istio-system/se-nginx-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: nginx-mtls-http
  namespace: istio-system
spec:
  hosts:
  - nginx.${OCP_APPS_DOMAIN}
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  endpoints:
    - address: nginx.${OCP_APPS_DOMAIN}
      ports:
        https: 443
      weight: 100
