http-https/ossm/istio-system/vs-egress-nginx-mtls.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: egress-nginx-mtls-http
  namespace: istio-system
spec:
  exportTo:
  - .
  gateways:
  - istio-default-egress-nginx-mtls-http
  hosts:
  - nginx.${OCP_APPS_DOMAIN}
  http:
  - match:
    - gateways:
      - istio-default-egress-nginx-mtls-http
      port: 8443
      authority:
        exact: 'nginx.${OCP_APPS_DOMAIN}'
    route:
    - destination:
        host: nginx.${OCP_APPS_DOMAIN}
        port:
          number: 443
        subset: nginx-mtls-origination
